Add new methods to CustomCassandraRepository
Add partition-centric methods to CustomCassandraRepository